--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,14 +16,16 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.8",
-    "expo": "~51.0.8",
-    "expo-font": "~12.0.4",
+    "expo": "~51.0.9",
+    "expo-device": "~6.0.2",
+    "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
-    "expo-router": "~3.5.14",
+    "expo-notifications": "~0.28.7",
+    "expo-router": "~3.5.15",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.5",
     "expo-web-browser": "~13.0.3",
     "moment": "^2.30.1",
     "nativewind": "4.0.1",
